<resources>
    <string name="app_name">WorldFootball</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Jogos">Games</string>
    <string name="Golos">Goals</string>
    <string name="VermelhosCasa">Red Cards Home</string>
    <string name="AmarelosCasa">Yellow Cards Home</string>
    <string name="VermelhosFora">Red Cards Away</string>
    <string name="AmarelosFora">Yellow Cards Away</string>
    <string name="ResultadoCasa">Score Home</string>
    <string name="ResultadoFora">Score Away</string>
    <string name="EquipaCasa">Home Team</string>
    <string name="EquipaFora">Away Team</string>
    <string name="Adicionar">Add</string>
    <string name="Atualizar">Update</string>
    <string name="JogoAdicionado">Game added with success!</string>
    <string name="AdicionarErro">Must fill all the fields!</string>
    <string name="AtualizarJogo">Game updated with success!</string>
    <string name="AtualizarErro">Must fill all the fields!</string>
    <string name="ApagarJogo">Delete Game?</string>
    <string name="ApagarSucesso">Deleted with success!</string>
    <string name="Sim">Yes</string>
    <string name="Não">No</string>
    <string name="ConfirmarApagar">Are you sure you want to delete?</string>
    <string name="ApagarTudo">Delete All Games?</string>
    <string name="TudoApagadoSucesso">All games deleted with success!</string>
    <string name="ConfirmarApagarTudo">Are you sure you want to delete all games?</string>
    <string name="Entrar">Login</string>
    <string name="Utilizador">Username</string>
    <string name="PalavraPasse">Password</string>
    <string name="Registar">Sign In</string>
    <string name="Sessaoexpirada">Session Expired</string>
    <string name="Sessaoexpirada_mensagem">Session Expired</string>
    <string name="erroalgo">Something went wrong!</string>
    <string name="ola">Hello</string>
    <string name="Sair">Logout</string>
    <string name="Sair_mensagem">Logout?</string>
    <string name="preencher_equipas">Fill team names!</string>
    <string name="api_error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="api_error_report_not_found">This report was not found, probably is was deleted. Reload data or try again.</string>
    <string name="api_error_authorisation_failed">Authorization failed. Please login again.</string>
    <string name="api_error_wrong_login">Wrong username or password.</string>
    <string name="ony_edit_your_games">Ups! You can only update or delete your notes.</string>
    <string name="successfull_updated_games">Game has been successfully updated!</string>
    <string name="successfull_deleted_games">Game has been successfully deleted!</string>
    <string name="delete_game">Delete Game</string>
    <string name="question_delete_game">Are you sure you want delete this game?</string>


</resources>